// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Question /> Jest tests renders correctly with props 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 18,
        "textAlign": "center",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Thin",
          "fontSize": 12,
        },
      ]
    }
  >
    Some test text question
     
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "textDecorationColor": "black",
            "textDecorationLine": "underline",
            "textDecorationStyle": "solid",
          },
        ]
      }
    >
      Some test text route
    </Text>
  </View>
</View>
`;

exports[`<Question /> Jest tests renders correctly without props 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 18,
        "textAlign": "center",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Thin",
          "fontSize": 12,
        },
      ]
    }
  >
     
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "textDecorationColor": "black",
            "textDecorationLine": "underline",
            "textDecorationStyle": "solid",
          },
        ]
      }
    />
  </View>
</View>
`;
